[gd_scene load_steps=4 format=3 uid="uid://dhueh8pyuthmb"]

[ext_resource type="Script" path="res://main_menu/lobby/lobby.gd" id="1_n0c43"]
[ext_resource type="PackedScene" uid="uid://dsk0ewm2gwp21" path="res://main_menu/lobby/player_icon.tscn" id="2_vcywn"]
[ext_resource type="PackedScene" uid="uid://cdf4d6fxe3nkt" path="res://main_menu/lobby/play_button.tscn" id="3_s2k72"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_n0c43")
player_icon = ExtResource("2_vcywn")

[node name="player1_position" type="Marker2D" parent="."]
position = Vector2(239, 160)

[node name="player2_position" type="Marker2D" parent="."]
position = Vector2(800, 160)

[node name="player3_position" type="Marker2D" parent="."]
position = Vector2(239, 400)

[node name="player4_position" type="Marker2D" parent="."]
position = Vector2(800, 400)

[node name="PlayButton" parent="." instance=ExtResource("3_s2k72")]
offset_left = 216.0
offset_top = 557.0
offset_right = 384.0
offset_bottom = 591.0

[node name="PlayButton2" parent="." instance=ExtResource("3_s2k72")]
offset_left = 607.0
offset_top = 557.0
offset_right = 812.0
offset_bottom = 591.0
text = "Play black hole"
game = "clickingGame"
